# libosu

./: .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.nix  Cargo.toml  Justfile  README.md  default.nix  flake.nix  rustfmt.toml
.github/workflows/: test.yml
examples/: hitsound-copier.rs
hitsound-copier/: Cargo.toml  README.md
hitsound-copier/src/: gui.rs  lib.rs
include/: common.hpp  enums.hpp  osu.hpp
include/beatmap/: beatmap.hpp  event.hpp  hitobject.hpp  map.hpp  set.hpp  timingpoint.hpp
include/math/: spline.hpp  vector.hpp
include/oldparser/: beatmapparser.hpp
include/osu/beatmap/: hitobject.hpp  map.hpp  set.hpp  timingpoint.hpp
include/osu/math/: spline.hpp  vector.hpp
include/osu/oldparser/: beatmapparser.hpp
include/osu/osz/: beatmapparser.hpp
include/osu/util/: color.hpp  enums.hpp  errors.hpp
include/util/: color.hpp
libosu/: Cargo.toml  README.md
libosu-js/: README.md  package.json
libosu-js/native/: Cargo.toml
libosu-js/native/src/: beatmap.rs  lib.rs  point.rs
libosu-py/: .gitignore  Cargo.toml  requirements.txt  setup.py
libosu-py/src/: beatmap.rs  lib.rs
libosu/src/: beatmap.rs  color.rs  diffcalc.rs  enums.rs  hitobject.rs  hitsounds.rs  lib.rs  mods.rs  point.rs  timing.rs  timingpoint.rs
libosu/src/osz/: beatmap.rs  hitobject.rs  mod.rs  timing.rs
libosu/src/parsers/: oszparser.rs
libosu/src/serde/: beatmap.rs  hitobject.rs  mod.rs  oszparser.rs  timing.rs
libosu/tests/: test_parser.rs  test_serde.rs
libosu/tests/files/: 774965.osu  804683.osu
oppai/: Cargo.toml  README.md
proptest-regressions/spline/: mod.txt
src/: api.rs  beatmap.rs  color.rs  data.rs  diffcalc.rs  enums.rs  errors.rs  events.rs  float.rs  hitobject.rs  hitsounds.rs  lib.rs  osudb.rs  point.rs  replay.rs  spline.rs  timing.rs  timingpoint.rs  utils.rs
src/apiv1/: errors.rs  mod.rs  models.rs
src/apiv2/: beatmap.rs  data.rs  mod.rs
src/beatmap/: diff_calc.rs  ext.rs  format.rs  hitobject.cpp  mod.rs  pp.rs  pp_calc.rs  set.cpp  timingpoint.cpp
src/db/: binary.rs  mod.rs  read.rs
src/math/: mod.rs  point.rs  spline.cpp
src/oldparser/: beatmapparser.cpp
src/osz/: beatmap.rs  beatmapparser.cpp  hitobject.rs  timing.rs
src/parsers/: mod.rs  oszparser.rs
src/parsing/: beatmap.rs  errors.rs  hitobject.rs  mod.rs  timing.rs
src/replay/: actions.rs  lzma.rs  mod.rs
src/spline/: bezier.rs  mod.rs
src/timing/: mod.rs  point.rs
src/util/: color.cpp
tests/: quickcheck_spline.rs  spline_points_list.in  test_issue_11.rs  test_replays.rs  test_serde.rs  test_spline.rs
tests/files/:  - nekodex - new beginnings [tutorial] (2020-12-16) Osu.osr  1360.osu  1595588.osu  169355.osu  3516.osu  774965.osu  804683.osu  adamas-hitsounds.osu  adamas-nohitsounds.osu  osu.db  replay-osu_1816113_2892542031.osr  replay_with_life.osr
