[package]
name = "libosu"
version = "0.0.28"
authors = [
    "Michael Zhang <mail@mzhang.io>",
    "Nobbele <realnobbele@gmail.com>",
    "Ian <IanShehadeh2020@gmail.com>",
]
edition = "2021"

description = "General-purpose osu! library."
license = "MIT"
readme = "README.md"
keywords = ["osu"]
repository = "https://github.com/iptq/libosu.git"
documentation = "https://docs.rs/libosu/"

[dev-dependencies]
serde_json = "1.0.82"
difference = "2.0.0"
anyhow = "1.0.58"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[dependencies]
bitflags = "1.3.2"
lazy_static = "1.4.0"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
ordered-float = { version = "3.0.0", features = ["serde"] }
regex = "1.6.0"
thiserror = "1.0.31"
derive_more = "0.99.17"
log = "0.4.17"
byteorder = "1.4.3"
static_assertions = "1.1.0"

futures = { version = "0.3.21", optional = true }
http = { version = "0.2.8", optional = true }
hyper = { version = "0.14.20", features = ["stream", "http2", "client", "tcp"], optional = true }
tokio = { version = "1.17.0", optional = true }
xz2 = { version = "0.1.6", optional = true }
lzma-rs = { version = "0.2", optional = true }
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false, optional = true }
anyhow = { version = "1.0.56", optional = true }
chrono = { version = "0.4.19", optional = true }
url = { version = "2.2.2", optional = true }
rosu-pp = { version = "0.8.0", optional = true }

[features]
default = []
examples = ["dep:anyhow", "serde", "dep:serde_json"]
apiv1 = [
    "dep:hyper", "dep:tokio", "dep:http", "dep:futures", "dep:reqwest",
    "dep:url", "serde", "dep:serde_json"
]
apiv2 = ["dep:reqwest", "serde", "dep:chrono", "chrono?/serde"]
replay-data = ["dep:lzma-rs"]
replay-data-xz2 = ["dep:xz2"]
pp-calc = ["dep:rosu-pp"]

# Used to check for clippy lints
# See: https://github.com/rust-lang/cargo/issues/8075#issuecomment-610259732
clippy = []

[package.metadata.cargo-all-features]
# skip_optional_dependencies = true
skip_feature_sets = [
    ["replay-data", "replay-data-xz2"],
]
allowlist = ["replay-data", "replay-data-xz2", "apiv1", "apiv2"]

[package.metadata.docs.rs]
features = ["apiv1", "apiv2", "replay-data", "experimental-diff-calc"]
rustdoc-args = ["--cfg", "docsrs"]
