[package]
name = "libosu"
version = "0.0.29"
authors = [
    "Michael Zhang <mail@mzhang.io>",
    "Nobbele <realnobbele@gmail.com>",
    "Ian <IanShehadeh2020@gmail.com>",
]
edition = "2021"

description = "General-purpose osu! library."
license = "MIT"
readme = "README.md"
keywords = ["osu"]
repository = "https://github.com/iptq/libosu.git"
documentation = "https://docs.rs/libosu/"

[profile.release]
lto = false

[dev-dependencies]
serde_json = "1.0.117"
difference = "2.0.0"
anyhow = "1.0.86"
proptest = "1.4.0"
proptest-derive = "0.4.0"

[dependencies]
bitflags = "2.5.0"
lazy_static = "1.4.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ordered-float = { version = "4.2.0", features = ["serde"] }
regex = "1.10.4"
thiserror = "1.0.61"
derive_more = "0.99.17"
log = "0.4.21"
byteorder = "1.5.0"
static_assertions = "1.1.0"

futures = { version = "0.3.30", optional = true }
http = { version = "1.1.0", optional = true }
hyper = { version = "1.3.1", features = ["http2", "client"], optional = true }
tokio = { version = "1.37.0", optional = true }
xz2 = { version = "0.1.7", optional = true }
lzma-rs = { version = "0.3.0", optional = true }
serde = { version = "1.0.202", features = ["derive"], optional = true }
serde_json = { version = "1.0.117", optional = true }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false, optional = true }
anyhow = { version = "1.0.86", optional = true }
chrono = { version = "0.4.38", optional = true }
url = { version = "2.5.0", optional = true }
rosu-pp = { version = "1.0.0", optional = true }

[features]
default = []
examples = ["dep:anyhow", "serde", "dep:serde_json"]
apiv1 = [
    "dep:hyper", "dep:tokio", "dep:http", "dep:futures", "dep:reqwest",
    "dep:url", "serde", "dep:serde_json"
]
apiv2 = ["dep:reqwest", "serde", "dep:chrono", "chrono?/serde"]
replay-data = ["dep:lzma-rs"]
replay-data-xz2 = ["dep:xz2"]
pp-calc = ["dep:rosu-pp"]
experimental-diff-calc = []

# Used to check for clippy lints
# See: https://github.com/rust-lang/cargo/issues/8075#issuecomment-610259732
clippy = []

[package.metadata.cargo-all-features]
# skip_optional_dependencies = true
skip_feature_sets = [
    ["replay-data", "replay-data-xz2"],
]
allowlist = ["replay-data", "replay-data-xz2", "apiv1", "apiv2"]

[package.metadata.docs.rs]
features = ["apiv1", "apiv2", "replay-data", "pp-calc"]
rustdoc-args = ["--cfg", "docsrs"]
